# pasteimg

./: Cargo.toml  README.md
.github/workflows/: ci.yml
Formula/: pasteimg.rb
src/: core.rs  lib.rs  main.rs  ui.rs
tests/: cli_e2e.rs
